# alteryx-to-databricks-converter

./: .databricksignore  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README_STREAMLIT.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: 01_customer_360_etl.yxmd  02_data_cleansing_pipeline.yxmd  03_multi_source_union.yxmd  04_regex_log_parser.yxmd  05_cross_tab_sales_report.yxmd  06_running_total_inventory.yxmd  07_find_replace_enrichment.yxmd  08_datetime_processing.yxmd  09_credit_risk_ml_pipeline.yxmd  10_churn_prediction_forest.yxmd  11_advanced_ml_pipeline.yxmd
docs/: a2d-guide.html  adding-tool-converters.md  alteryx_migration_snippets.py  alteryx_migration_snippets_non_uc.py  alteryx_migration_snippets_uc.py  architecture.md  conversion-mapping.md  expression-reference.md  migration-playbook.md
examples/: connection_mapping.yml  sample_workflow.yxmd
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: app.tsx  main.tsx  tailwind.css
frontend/src/components/analyze/: analysis-summary.tsx  coverage-chart.tsx  tool-frequency.tsx  workflow-table.tsx
frontend/src/components/convert/: batch-progress.tsx  batch-results.tsx  conversion-results.tsx  format-selector.tsx  workflow-graph.tsx
frontend/src/components/layout/: page-header.tsx  page-transition.tsx  sidebar.tsx
frontend/src/components/shared/: code-block.tsx  coming-soon.tsx  error-boundary.tsx  file-dropzone.tsx  metric-card.tsx  status-badge.tsx  toast-container.tsx
frontend/src/components/tools/: category-group.tsx  tool-card.tsx  tool-grid.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx  skeleton.tsx  tabs.tsx
frontend/src/hooks/: use-analysis.ts  use-batch.ts  use-conversion.ts  use-history.ts  use-tools.ts
frontend/src/lib/: api.ts  constants.ts  csv.ts  deploy-status.ts  download.ts  shiki.ts  warning-parsing.ts
frontend/src/routes/: about.tsx  analyze.tsx  convert-batch.tsx  convert.tsx  history.tsx  index.tsx  migration-plan.tsx  settings.tsx  tools.tsx  validate.tsx
frontend/src/stores/: analysis.ts  batch.ts  convert-bridge.ts  local-history.ts  settings.ts  theme.ts  toast.ts
server/: constants.py  main.py  settings.py
server/models/: requests.py  responses.py
server/routers/: analyze.py  convert.py  health.py  history.py  tools.py  validate.py
server/services/: analysis.py  batch.py  conversion.py  history.py  lakebase.py  tool_matrix.py
server/utils/: validation.py
server/websocket/: batch.py
src/a2d/: __init__.py  __main__.py  cli.py  config.py  connections.py  exceptions.py  pipeline.py
src/a2d/analyzer/: batch.py  complexity.py  coverage.py  readiness.py  report.py
src/a2d/converters/: __init__.py  registry.py  utils.py
src/a2d/converters/developer/: __init__.py  chart.py  download.py  dynamic_input.py  dynamic_output.py  email_output.py  macro_io.py  python_tool.py  report.py  run_command.py  widget.py  workflow_control.py
src/a2d/converters/io/: __init__.py  browse.py  cloud_storage.py  dataverse_input.py  directory.py  input_data.py  output_data.py  tableau_publish.py  text_input.py
src/a2d/converters/join/: __init__.py  append_fields.py  find_replace.py  join.py  join_multiple.py  union.py
src/a2d/expressions/: __init__.py  ast.py  base_translator.py  errors.py  functions.py  parser.py  sql_translator.py  tokenizer.py  translator.py
src/a2d/generators/: __init__.py  base.py  dab.py  dlt.py  lakeflow.py  pyspark.py  sql.py  unity_catalog.py  workflow_json.py
src/a2d/ir/: graph.py  nodes.py  types.py
src/a2d/observability/: __init__.py  batch.py  confidence.py  deploy_status.py  errors.py  expression_audit.py  hints.py  metrics.py  performance_hints.py  report.py  warning_categorization.py
src/a2d/parser/: connection_parser.py  node_parser.py  schema.py  workflow_parser.py
src/a2d/utils/: logging.py  types.py  xml_helpers.py
src/a2d/validation/: data_validator.py  schema_validator.py  syntax_validator.py
tests/: conftest.py
tests/fixtures/expressions/: expression_corpus.json
tests/fixtures/packt/: LICENSE
tests/fixtures/workflows/: complex_pipeline.yxmd  join_and_summarize.yxmd  simple_filter.yxmd
tests/integration/: test_end_to_end.py  test_packt_workflows.py  test_report_generation.py
tests/smoke/: complex_pipeline_dlt.yml  complex_pipeline_lakeflow.yml  complex_pipeline_pyspark.yml  complex_pipeline_sql.yml  conftest.py  join_and_summarize_dlt.yml  join_and_summarize_lakeflow.yml  join_and_summarize_pyspark.yml  join_and_summarize_sql.yml  simple_filter_dlt.yml  simple_filter_lakeflow.yml  simple_filter_pyspark.yml  simple_filter_sql.yml  test_smoke.py
tests/unit/: test_cli.py  test_connections.py  test_pipeline.py  test_types.py
tests/unit/analyzer/: test_complexity.py
tests/unit/converters/: conftest.py  test_dataverse_input.py  test_developer.py  test_io.py  test_join.py  test_parse.py  test_predictive.py  test_preparation.py  test_registry.py  test_spatial.py  test_transform.py
tests/unit/expressions/: test_parser.py  test_tokenizer.py  test_translator.py
tests/unit/generators/: test_base.py  test_dab.py  test_dlt.py  test_lakeflow.py  test_pyspark.py  test_sql.py  test_unity_catalog.py  test_workflow_json.py
tests/unit/ir/: test_graph.py
tests/unit/observability/: test_batch.py  test_confidence.py  test_deploy_status.py  test_errors.py  test_expression_audit.py  test_hints.py  test_metrics.py  test_performance_hints.py  test_report.py  test_warning_categorization.py
tests/unit/parser/: test_workflow_parser.py
tests/unit/server/: conftest.py  test_analyze_endpoint.py  test_batch_endpoint.py  test_convert_endpoint.py  test_health_endpoint.py  test_tools_endpoint.py  test_validation.py  test_websocket.py
(+70 files in other folders)
