[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alteryx2databricks"
version = "0.3.0"
description = "Alteryx to Databricks migration accelerator - parse .yxmd workflows and generate PySpark, DLT, and SQL"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Databricks Field Engineering" },
]
keywords = ["alteryx", "databricks", "migration", "pyspark", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lxml>=5.0",
    "networkx>=3.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "sqlglot>=25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0",
]
history = [
    "alteryx2databricks[server]",
    "psycopg[binary]>=3.1",
]
streamlit = [
    "streamlit>=1.40.0",
]
validation = [
    "datacompy>=0.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "lxml-stubs>=0.5",
    "types-PyYAML>=6.0",
    "pip-tools>=7.0",
    "pre-commit>=3.7",
]
all = [
    "alteryx2databricks[server,streamlit,validation,dev]",
]

[project.scripts]
a2d = "a2d.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/a2d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short --cov=a2d --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/a2d"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["a2d", "server"]

[[tool.mypy.overrides]]
module = ["server.*"]
disallow_untyped_defs = false
